--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,14 @@
+@font-face {
+  font-family: "DepartureMono";
+  src: url("/DepartureMono-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   background-color: #242424; /* Keep background for contrast */
+  font-family: "DepartureMono", "Courier New", monospace;
 }
 
 body {
